**8.0.0 (unreleased)**

* **BACKWARD INCOMPATIBLE** Remove the ability to find any files other than the
  ones directly linked from the index or find-links pages.

* **BACKWARD INCOMPATIBLE** Remove the ``--download-cache`` which had been
  deprecated and no-op'd in 6.0.

* **BACKWARD INCOMPATIBLE** Remove the ``--log-explicit-levels`` which had been
  deprecated in 6.0.

* Deprecate and no-op the ``--allow-external``, ``--allow-all-external``, and
  ``--allow-unverified`` functionality that was added as part of PEP 438. With
  changes made to the repository protocol made in PEP 470, these options are no
  longer functional.

* Allow ``--trusted-host`` within a requirements file. :issue:`2822`.

* Allow ``--process-dependency-links`` within a requirements file. :issue:`1274`.

* Allow ``--pre`` within a requirements file. :issue:`1273`.

* Allow repository URLs with secure transports to count as trusted. (E.g.,
  "git+ssh" is okay.) :issue:`2811`.

* Implement a top-level ``pip download`` command and deprecate
  ``pip install --download``.

* When installing, if building a wheel fails, clear up the build directory
  before falling back to a source install. :issue:`3047`.

* Fix user directory expansion when ``HOME=/``. Workaround for Python bug
  http://bugs.python.org/issue14768, reported in :issue:`2996`.


**7.1.2 (2015-08-22)**

* Don't raise an error if pip is not installed when checking for the latest pip
  version.


**7.1.1 (2015-08-20)**

* Check that the wheel cache directory is writable before we attempt to write
  cached files to them.

* Move the pip version check until *after* any installs have been performed,
  thus removing the extraenous warning when upgrading pip.

* Added debug logging when using a cached wheel.

* Respect platlib by default on platforms that have it separated from purlib.

* Upgrade packaging to 15.3.

  * Normalize post-release spellings for rev/r prefixes.

* Upgrade distlib to 0.2.1.
