@@ -7,8 +7,6 @@ matrix:
           env: TOXENV=py26
         - python: 2.7
           env: TOXENV=py27
-        - python: 3.2
-          env: TOXENV=py32
         - python: 3.3
           env: TOXENV=py33
         - python: 3.4
