@@ -54,8 +54,4 @@ fi
 tox -- -m unit $TOXARGS
 
 # Run our integration tests
-# Note: There is an issue with Python 3.2 where concurrent imports will corrupt
-#       the generated .pyc files and we'll get very strange errors. However as
-#       long as we continue to run the unit tests first and in a seperate step
-#       then this should work fine.
 tox -- -m integration -n 8 $TOXARGS
