@@ -6,6 +6,6 @@ requests==2.7.0
 CacheControl==0.11.5
 lockfile==0.10.2
 progress==1.2
-ipaddress==1.0.14  # Only needed on 2.6, 2.7, and 3.2
+ipaddress==1.0.14  # Only needed on 2.6 and 2.7
 packaging==15.3
 retrying==1.3.3
