@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    docs, packaging, pep8, py3pep8, py26, py27, py32, py33, py34, py35, pypy
+    docs, packaging, pep8, py3pep8, py26, py27, py33, py34, py35, pypy
 
 [testenv]
 setenv =
@@ -20,10 +20,10 @@ basepython = python2.7
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
 
 [testenv:packaging]
-deps = 
+deps =
     check-manifest
     readme
-commands = 
+commands =
     check-manifest
     python setup.py check -m -r -s
 
